<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DrawTheDots</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="clear">U</string>
    <string name="screen_text"></string>
    <string name="next">R</string>
    <string name="clear_all">X</string>
    <string name="crash_toast_text">Oops, something went wrong!</string>
    <string name="select">S</string>
    <string name="select_next">&gt;</string>
    <string name="select_previous">&lt;</string>
    <string name="play">Try</string>
    <string name="title_activity_edit_drawing">EditDrawing</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="filename">Filename</string>
    <string name="open">Open</string>
    <string name="search">Search</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>

</resources>
